--- a/app/src/main/res/layout/single_recycler_item_targetapi9.xml
+++ b/app/src/main/res/layout/single_recycler_item_targetapi9.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:foreground="?android:attr/activatedBackgroundIndicator"
-    tools:targetApi="honeycomb">
+    android:foreground="?attr/selectableItemBackgroundBorderless"
+    android:clickable="true">
 
     <com.bikrampandit.cliquick.Utility.SquareImageView
         android:id="@+id/img"
