--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="none"
-    tools:context="com.bikrampandit.cliquick.MainActivity">
+    tools:context="com.bikrampandit.cliquick.Activity.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
