--- a/app/src/main/res/layout/single_view.xml
+++ b/app/src/main/res/layout/single_view.xml
@@ -5,17 +5,78 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <com.bikrampandit.cliquick.Utility.TouchImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop" />
 
-    <VideoView
-        android:id="@+id/video"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:id="@+id/video_layout"
+        android:clickable="true"
+        android:layout_height="match_parent">
+
+
+        <VideoView
+            android:id="@+id/video"
+            android:clickable="true"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="#60a3a3a3"
+            android:id="@+id/videocontroller"
+            android:padding="3dp">
+
+            <ImageButton
+                android:contentDescription="play_btn"
+                android:id="@+id/play_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:src="@drawable/ic_play" />
+
+            <TextView
+                android:id="@+id/seek_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/play_btn"
+                android:layout_toRightOf="@id/play_btn"
+                android:padding="2dp"
+                android:text="00:00"
+                android:textColor="#ffffff" />
+
+            <TextView
+                android:id="@+id/total_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:padding="2dp"
+                android:text="00:05"
+                android:textColor="#ffffff" />
+
+            <SeekBar
+                android:id="@+id/seek_time_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/seek_time"
+                android:layout_toLeftOf="@id/total_time"
+                android:layout_toRightOf="@id/seek_time"
+                android:layout_toStartOf="@id/total_time" />
+        </RelativeLayout>
+
+    </FrameLayout>
 
 </RelativeLayout>
