--- a/app/src/main/res/layout/single_grid.xml
+++ b/app/src/main/res/layout/single_grid.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:foreground="?android:attr/activatedBackgroundIndicator"
-    tools:targetApi="honeycomb">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:foreground="@drawable/selector"
+   >
 
     <com.bikrampandit.cliquick.Utility.SquareImageView
         android:id="@+id/img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:scaleType="centerCrop"/>
 
     <com.bikrampandit.cliquick.Utility.SquareImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
         android:id="@+id/overlay"
         android:visibility="gone"
         android:src="@drawable/ic_overlay"/>
