--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -14,6 +14,7 @@
         android:stretchMode="columnWidth"
         android:gravity="center"
         android:numColumns="3"
+        android:listSelector="@drawable/selector"
         android:clickable="true"
         android:verticalSpacing="2dp"
         android:horizontalSpacing="2dp"
